@@ -1,7 +1,7 @@
 package com.yas.customer.service;
 
-import com.yas.customer.exception.AccessDeniedException;
-import com.yas.customer.exception.NotFoundException;
+import com.yas.commonlibrary.exception.AccessDeniedException;
+import com.yas.commonlibrary.exception.NotFoundException;
 import com.yas.customer.model.UserAddress;
 import com.yas.customer.repository.UserAddressRepository;
 import com.yas.customer.utils.Constants;
@@ -10,7 +10,6 @@ import com.yas.customer.viewmodel.address.AddressDetailVm;
 import com.yas.customer.viewmodel.address.AddressPostVm;
 import com.yas.customer.viewmodel.address.AddressVm;
 import com.yas.customer.viewmodel.useraddress.UserAddressVm;
-import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
@@ -38,29 +37,16 @@ public class UserAddressService {
 
         List<UserAddress> userAddressList = userAddressRepository.findAllByUserId(userId);
         List<AddressDetailVm> addressVmList = locationService.getAddressesByIdList(
-            userAddressList.stream()
-                .map(UserAddress::getAddressId)
-                .collect(Collectors.toList()));
+            userAddressList.stream().map(UserAddress::getAddressId).collect(Collectors.toList()));
 
-        List<ActiveAddressVm> addressActiveVms = userAddressList.stream()
-            .flatMap(userAddress -> addressVmList.stream()
-                .filter(addressDetailVm -> userAddress.getAddressId().equals(addressDetailVm.id()))
-                .map(addressDetailVm -> new ActiveAddressVm(
-                    addressDetailVm.id(),
-                    addressDetailVm.contactName(),
-                    addressDetailVm.phone(),
-                    addressDetailVm.addressLine1(),
-                    addressDetailVm.city(),
-                    addressDetailVm.zipCode(),
-                    addressDetailVm.districtId(),
-                    addressDetailVm.districtName(),
-                    addressDetailVm.stateOrProvinceId(),
-                    addressDetailVm.stateOrProvinceName(),
-                    addressDetailVm.countryId(),
-                    addressDetailVm.countryName(),
-                    userAddress.getIsActive()
-                ))
-            ).collect(Collectors.toList());
+        List<ActiveAddressVm> addressActiveVms = userAddressList.stream().flatMap(userAddress -> addressVmList.stream()
+                .filter(addressDetailVm -> userAddress.getAddressId().equals(addressDetailVm.id())).map(
+                    addressDetailVm -> new ActiveAddressVm(addressDetailVm.id(), addressDetailVm.contactName(),
+                        addressDetailVm.phone(), addressDetailVm.addressLine1(), addressDetailVm.city(),
+                        addressDetailVm.zipCode(), addressDetailVm.districtId(), addressDetailVm.districtName(),
+                        addressDetailVm.stateOrProvinceId(), addressDetailVm.stateOrProvinceName(),
+                        addressDetailVm.countryId(), addressDetailVm.countryName(), userAddress.getIsActive())))
+            .toList();
 
         //sort by isActive
         Comparator<ActiveAddressVm> comparator = Comparator.comparing(ActiveAddressVm::isActive).reversed();
@@ -73,22 +59,22 @@ public class UserAddressService {
             throw new AccessDeniedException(Constants.ErrorCode.UNAUTHENTICATED);
         }
 
-        UserAddress userAddress = userAddressRepository.findByIsActiveTrue().orElseThrow(()
-            -> new NotFoundException(Constants.ErrorCode.USER_ADDRESS_NOT_FOUND));
+        UserAddress userAddress = userAddressRepository.findByUserIdAndIsActiveTrue(userId)
+            .orElseThrow(() -> new NotFoundException(Constants.ErrorCode.USER_ADDRESS_NOT_FOUND));
 
-        AddressDetailVm addressVmList = locationService.getAddressById(userAddress.getAddressId());
-        return addressVmList;
+        return locationService.getAddressById(userAddress.getAddressId());
     }
 
     public UserAddressVm createAddress(AddressPostVm addressPostVm) {
         String userId = SecurityContextHolder.getContext().getAuthentication().getName();
 
+        // Fetch all existing addresses for the user
+        List<UserAddress> userAddressList = userAddressRepository.findAllByUserId(userId);
+        boolean isFirstAddress = userAddressList.isEmpty();
+
         AddressVm addressGetVm = locationService.createAddress(addressPostVm);
-        UserAddress userAddress = UserAddress.builder()
-            .userId(userId)
-            .addressId(addressGetVm.id())
-            .isActive(false)
-            .build();
+        UserAddress userAddress =
+            UserAddress.builder().userId(userId).addressId(addressGetVm.id()).isActive(isFirstAddress).build();
 
         return UserAddressVm.fromModel(userAddressRepository.save(userAddress), addressGetVm);
 
@@ -106,11 +92,9 @@ public class UserAddressService {
     public void chooseDefaultAddress(Long id) {
         String userId = SecurityContextHolder.getContext().getAuthentication().getName();
         List<UserAddress> userAddressList = userAddressRepository.findAllByUserId(userId);
-        List<UserAddress> newUserAddressList = new ArrayList<>();
         for (UserAddress userAddress : userAddressList) {
             userAddress.setIsActive(Objects.equals(userAddress.getAddressId(), id));
-            newUserAddressList.add(userAddress);
         }
-        userAddressRepository.saveAll(newUserAddressList);
+        userAddressRepository.saveAll(userAddressList);
     }
 }
